Introduced static routing, elm and bootstrap.

--- a/client/package.json
+++ b/client/package.json
@@ -7,5 +7,8 @@
   },
   "author": "",
   "license": "MIT",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "bootstrap": "^5.3.3"
+  }
 }
