--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -5,5 +5,11 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[[bin]]
+path = "src/main.rs"
+name = "actix-elm-setup"
+
+
 [dependencies]
+actix-files = "0.6.6"
 actix-web = "4.7.0"
