--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "prebuild": "ncp index.html ../public/index.html && ncp node_modules/bootstrap/dist/css/bootstrap.css ../public/css/bootstrap.css",
+    "build": "elm make src/Main.elm --output ../public/elm.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
