--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "build-elm": "cd client && npm run build",
+    "run-rust": "cd server && cargo run",
+    "run": "npm run build-elm && npm run run-rust",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
