--- a/client/package.json
+++ b/client/package.json
@@ -12,5 +12,8 @@
   "description": "",
   "dependencies": {
     "bootstrap": "^5.3.3"
+  },
+  "devDependencies": {
+    "travelm-agency": "^3.4.1"
   }
 }
