--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -13,3 +13,5 @@ name = "actix-elm-setup"
 [dependencies]
 actix-files = "0.6.6"
 actix-web = "4.7.0"
+serde = { version = "1.0.203", features = ["derive"] }
+serde_json = "1.0.117"
