--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -13,7 +13,8 @@ name = "actix-elm-setup"
 [dependencies]
 actix-files = "0.6.6"
 actix-web = "4.7.0"
-deadpool-postgres = { version = "0.14.0", features = ["serde"] }
+bcrypt = "0.15.1"
 env_logger = "0.11.3"
 serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0.117"
+uuid = { version = "1.10.0", features = ["v4"]}
