--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -3,7 +3,6 @@ name = "server"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [[bin]]
 path = "src/main.rs"
@@ -17,4 +16,11 @@ bcrypt = "0.15.1"
 env_logger = "0.11.3"
 serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0.117"
-uuid = { version = "1.10.0", features = ["v4"]}
+sqlx = { version = "0.7.4", default-features = false, features = [
+    "runtime-tokio-rustls",
+    "macros",
+    "postgres",
+    "uuid",
+    "chrono",
+    "migrate"] }
+uuid = { version = "1.10.0", features = ["v4"] }
