--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -12,10 +12,12 @@ name = "actix-elm-setup"
 [dependencies]
 actix-files = "0.6.6"
 actix-web = "4.7.0"
+base64 = "0.22.1"
 bcrypt = "0.15.1"
 env_logger = "0.11.3"
 serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0.117"
+simple_crypt = "0.2.3"
 sqlx = { version = "0.7.4", default-features = false, features = [
     "runtime-tokio-rustls",
     "macros",
@@ -24,3 +26,4 @@ sqlx = { version = "0.7.4", default-features = false, features = [
     "chrono",
     "migrate"] }
 uuid = { version = "1.10.0", features = ["v4"] }
+bytes = "1.6.0"
