--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -27,3 +27,4 @@ sqlx = { version = "0.7.4", default-features = false, features = [
     "migrate"] }
 uuid = { version = "1.10.0", features = ["v4"] }
 bytes = "1.6.0"
+futures-util = "0.3.30"
