--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -28,3 +28,4 @@ sqlx = { version = "0.7.4", default-features = false, features = [
 uuid = { version = "1.10.0", features = ["v4"] }
 bytes = "1.6.0"
 futures-util = "0.3.30"
+config = "0.14.0"
