--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -29,3 +29,4 @@ uuid = { version = "1.10.0", features = ["v4"] }
 bytes = "1.6.0"
 futures-util = "0.3.30"
 config = "0.14.0"
+unicode-segmentation = "1.11.0"
