--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -32,3 +32,4 @@ config = "0.14.0"
 unicode-segmentation = "1.11.0"
 regex = "1.10.5"
 anyhow = "1.0.86"
+log = { version = "0.4.22", features = ["std"] }
