--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -33,3 +33,4 @@ unicode-segmentation = "1.11.0"
 regex = "1.10.5"
 anyhow = "1.0.86"
 log = { version = "0.4.22", features = ["std"] }
+chrono = "0.4.38"
