--- a/client-new/package.json
+++ b/client-new/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "postbuild": "ncp web/ ../public/ && ncp node_modules/bootstrap/dist/css/bootstrap.css ../public/css/bootstrap.css",
+    "postbuild": "ncp web/ ../public/ && ncp node_modules/bootstrap/dist/css/bootstrap.css ../public/css/bootstrap.css && ncp i18n/ ../public/lang/",
     "build": "elm make src/Main.elm --output ../public/js/elm.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
