--- a/client-new/package.json
+++ b/client-new/package.json
@@ -6,7 +6,7 @@
     "prebuild": "npm run generate-translations",
     "build": "elm make src/Main.elm --output ../public/js/elm.js",
     "postbuild": "npm run copyWeb && npm run copyBootstrap && npm run copyI18n",
-    "generate-translations": "elm-i18next-gen -s i18n/main.en.json -t src -o",
+    "generate-translations": "elm-i18next-gen -s i18n/translation.en.json -t src -o",
     "copyWeb": "ncp web/ ../public/",
     "copyBootstrap": "ncp node_modules/bootstrap/dist/css/bootstrap.css ../public/css/bootstrap.css",
     "copyI18n": "ncp i18n/ ../public/lang/",
