--- a/client-new/package.json
+++ b/client-new/package.json
@@ -5,10 +5,12 @@
   "scripts": {
     "prebuild": "npm run generateTranslations",
     "build": "elm make src/Main.elm --output ../public/js/elm.js",
-    "postbuild": "npm run copyWeb && npm run copyBootstrap && npm run copyI18n",
+    "postbuild": "npm run copyWeb && npm run copyBootstrap && npm run copyIcons && npm run copyFonts && npm run copyI18n",
     "generateTranslations": "elm-i18next-gen -s i18n/translation.de.json -t src -o",
     "copyWeb": "ncp web/ ../public/",
     "copyBootstrap": "ncp node_modules/bootstrap/dist/css/bootstrap.css ../public/css/bootstrap.css",
+    "copyIcons": "ncp node_modules/bootstrap-icons/font/bootstrap-icons.css ../public/css/bootstrap-icons.css",
+    "copyFonts": "ncp node_modules/bootstrap-icons/font/fonts ../public/css/fonts/",
     "copyI18n": "ncp i18n/ ../public/lang/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,7 +18,8 @@
   "license": "MIT",
   "description": "",
   "dependencies": {
-    "bootstrap": "^5.3.3"
+    "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3"
   },
   "devDependencies": {
     "elm-i18next-gen": "^1.1.0"
