Further prepared for merging.

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build-elm": "cd client-new && npm run build",
+    "build-elm": "cd client && npm run build",
     "run-rust": "cd server && cargo run",
     "run": "npm run build-elm && npm run run-rust",
     "test": "echo \"Error: no test specified\" && exit 1"
