The expiration modal is basically working.
Actions on the two buttons are still missing.

--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,9 @@
     "postbuild": "npm run copyWeb && npm run copyBootstrap && npm run copyIcons && npm run copyFonts && npm run copyI18n",
     "generateTranslations": "elm-i18next-gen -s i18n/translation.de.json -t src -o",
     "copyWeb": "ncp web/ ../public/",
-    "copyBootstrap": "ncp node_modules/bootstrap/dist/css/bootstrap.css ../public/css/bootstrap.css",
+    "copyBootstrap": "npm run copyBootstrapCss && npm run copyBootstrapJs",
+    "copyBootstrapCss": "ncp node_modules/bootstrap/dist/css/bootstrap.css ../public/css/bootstrap.css",
+    "copyBootstrapJs": "ncp node_modules/bootstrap/dist/js/bootstrap.bundle.js ../public/js/bootstrap.js",
     "copyIcons": "ncp node_modules/bootstrap-icons/font/bootstrap-icons.css ../public/css/bootstrap-icons.css",
     "copyFonts": "ncp node_modules/bootstrap-icons/font/fonts ../public/css/fonts/",
     "copyI18n": "ncp i18n/ ../public/lang/",
